# label-fusion

./: .autoenv.zsh  .autoenv_leave.zsh  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  build.sh  demo.py  demo.sh
data/: camera-intrinsics.txt  frame-000000.pose.txt  frame-000007.pose.txt  frame-000009.pose.txt  frame-000010.pose.txt  frame-000011.pose.txt  frame-000013.pose.txt  frame-000014.pose.txt
data/labels/: camera-intrinsics.txt  frame-000000.pose.txt  frame-000001.pose.txt  frame-000002.pose.txt  frame-000003.pose.txt  frame-000004.pose.txt  frame-000005.pose.txt  frame-000006.pose.txt  frame-000007.pose.txt  frame-000008.pose.txt  frame-000009.pose.txt  frame-000010.pose.txt  frame-000011.pose.txt  frame-000012.pose.txt  frame-000013.pose.txt  frame-000014.pose.txt
data/masks/: frame-000001.pose.txt  frame-000002.pose.txt  frame-000003.pose.txt  frame-000004.pose.txt  frame-000005.pose.txt  frame-000006.pose.txt  frame-000008.pose.txt  frame-000012.pose.txt
include/: argparse.hpp  utils.hpp
src/: bilateral_filter.cpp  label_fusion.cpp  label_view.cpp  marching_cubes.cpp  mask_fusion.cpp  mask_view.cpp  organized_point_cloud.cpp
